compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_module_select_constructor.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.Wibble(1)\n  1\n}\n"
---
warning: Unused value
  ┌─ /src/warning/wrn.rakun:5:3
  │
5 │   wibble.Wibble(1)
  │   ^^^^^^^^^^^^^^^^ This value is never used
