compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_module_wuth_alias_warning_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 979
expression: import rakun/wibble as wobble
---
----- SOURCE CODE
import rakun/wibble as wobble

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.rakun:1:1
  │
1 │ import rakun/wibble as wobble
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
