compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_pipeline_ending_with_variant_raises_a_warning_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1339
expression: "\nimport wibble\n\npub fn wobble(a) { a }\n\npub fn main() {\n  1 |> wobble |> wibble.Wibble\n  1\n}\n"
---
----- SOURCE CODE

import wibble

pub fn wobble(a) { a }

pub fn main() {
  1 |> wobble |> wibble.Wibble
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.rakun:7:3
  │
7 │   1 |> wobble |> wibble.Wibble
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used
