compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_private_fn_warnings_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "fn a() { 1 }"
---
----- SOURCE CODE
fn a() { 1 }

----- WARNING
warning: Unused private function
  ┌─ /src/warning/wrn.rakun:1:1
  │
1 │ fn a() { 1 }
  │ ^^^^^^ This private function is never used

Hint: You can safely remove it.
