compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_private_type_warnings_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: type X
---
warning: Unused private type
  ┌─ /src/warning/wrn.rakun:1:1
  │
1 │ type X
  │ ^^^^^^ This private type is never used

Hint: You can safely remove it.
