compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_private_type_warnings_test3.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 211
expression: type X = Int
---
----- SOURCE CODE
type X = Int

----- WARNING
warning: Unused private type
  ┌─ /src/warning/wrn.rakun:1:1
  │
1 │ type X = Int
  │ ^^^^^^^^^^^^ This private type is never used

Hint: You can safely remove it.
